# minimal_physics_engine

./: Cargo.toml
assets/: test.json
examples/: physics_example.rs
src/: actor.rs  collider.rs  engine.rs  hecs_support.rs  lib.rs  math.rs  prelude.rs  solid.rs
src/expanded_engine/: json_loading.rs  mod.rs  prelude.rs  velocity.rs
