[package]
name = "minimal_physics_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
hecs = {version = "0.9.1", optional = true }

[features]
hecs_support = ["dep:hecs"]
expanded_engine = []
