[package]
name = "minimal_physics_engine"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
hecs = {version = "0.9.1", optional = true }
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}

[features]
hecs_support = ["dep:hecs"]
expanded_engine = []
