[package]
name = "minimal_physics_engine"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde = {version = "1.0.151", optional = true, features = ["derive"]}
serde_json = {version = "1.0.91", optional = true}

[features]
expanded_engine = ["dep:serde", "dep:serde_json"]

[[example]]
name = "physics_example"
required-features = ["expanded_engine"]
